<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:background="@color/colorWhite"
  app:layoutDescription="@xml/activity_sign_up_scene"
  tools:context=".Intro.SignUpActivity">

  <ImageButton
    android:id="@+id/backImageButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:src="@drawable/ic_arrow_back_tear_24dp"
    android:layout_marginTop="@dimen/text_margin"
    android:layout_marginLeft="@dimen/text_margin"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginHorizontal="@dimen/text_margin"
    android:text="@string/quick_login"
    android:textSize="15sp"
    android:textAllCaps="true"
    android:textColor="@color/colorBlack"
    android:fontFamily="@font/hurmes_bold"/>
  <LinearLayout
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginHorizontal="@dimen/text_margin"
    android:weightSum="2">

    <Button
      android:id="@+id/googleSignInButton"
      style="@style/GoogleSignInButton"
      android:layout_width="0dp"
      android:layout_marginRight="8dp"
      android:layout_height="wrap_content"
      android:layout_weight="1" />

    <Button
      android:id="@+id/facebookLoginButton"
      style="@style/FacebookLoginButton"
      android:layout_width="0dp"
      android:layout_marginLeft="8dp"
      android:layout_height="wrap_content"
      android:layout_weight="1" />

  </LinearLayout>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:textColor="@color/colorBlack"
    android:fontFamily="@font/hurmes_bold"
    android:text="@string/sign_up_sign_up"
    android:textAllCaps="true"
    android:textSize="15sp"
    android:layout_marginHorizontal="@dimen/text_margin"/>

  <EditText
    android:id="@+id/dateOfBirthEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/sign_up_date_hint"
    android:textColor="@color/colorBlack"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="10dp"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/sign_up_date_of_birth"
    android:textAllCaps="true"
    android:textSize="12sp"
    android:fontFamily="@font/hurmes_semibold"
    android:textColor="@color/colorGray30"
    android:layout_marginHorizontal="@dimen/text_margin"/>

  <EditText
    android:id="@+id/emailForgotEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/sign_up_email_hint"
    android:layout_marginTop="10dp"
    android:layout_marginHorizontal="12dp"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/sign_up_email"
    android:textAllCaps="true"
    android:textSize="12sp"
    android:fontFamily="@font/hurmes_semibold"
    android:textColor="@color/colorGray30"
    android:layout_marginHorizontal="@dimen/text_margin"/>

  <EditText
    android:id="@+id/usernameEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/sign_up_username_hint"
    android:layout_marginTop="10dp"
    android:layout_marginHorizontal="12dp"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/sign_up_username"
    android:textAllCaps="true"
    android:textSize="12sp"
    android:fontFamily="@font/hurmes_semibold"
    android:textColor="@color/colorGray30"
    android:layout_marginHorizontal="@dimen/text_margin"/>

  <EditText
    android:id="@+id/passwordEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/sign_up_password_hint"
    android:layout_marginTop="10dp"
    android:layout_marginHorizontal="12dp"
    android:inputType="textPassword"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/sign_up_password"
    android:textAllCaps="true"
    android:textSize="12sp"
    android:fontFamily="@font/hurmes_semibold"
    android:textColor="@color/colorGray30"
    android:layout_marginHorizontal="@dimen/text_margin"/>

  <Button
    android:id="@+id/signUpButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button_corners"
    android:text="@string/sign_up_button"
    android:textColor="@color/colorWhite"
    android:layout_marginTop="20dp"
    android:layout_marginHorizontal="@dimen/text_margin"/>

  <com.google.android.gms.common.SignInButton
    android:id="@+id/googleSignIn"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="500dp" />
  <com.facebook.login.widget.LoginButton
    android:id="@+id/facebookLogin"
    android:layout_width="0dp"
    android:layout_height="0dp"/>
  <ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_gravity="center|bottom"
    android:layout_marginBottom="20dp"
    android:visibility="gone" />

</LinearLayout>