<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorWhite">
  <EditText
    android:id="@+id/emailForgotEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginHorizontal="@dimen/text_margin"
    android:hint="@string/sign_in_username_hint"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView4" />

  <TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="17dp"
    android:fontFamily="@font/hurmes_bold"
    android:text="@string/forgot_password"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/cancelTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:layout_marginEnd="100dp"
    android:fontFamily="@font/hurmes_bold"
    android:text="@string/forgot_cancel"
    android:textSize="18sp"
    android:textAllCaps="true"
    android:textColor="@color/colorTear"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/emailForgotEditText" />

  <TextView
    android:id="@+id/okTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:layout_marginEnd="40dp"
    android:fontFamily="@font/hurmes_bold"
    android:text="@string/forgot_ok"
    android:textAllCaps="true"
    android:textColor="@color/colorTear"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/emailForgotEditText" />



</androidx.constraintlayout.widget.ConstraintLayout>