<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/layoutBottomSheet"
  android:orientation="vertical"
  android:background="@color/colorWhite"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <Button
    android:id="@+id/createSet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/text_margin"
    android:paddingRight="200dp"
    android:background="@color/colorWhite"
    android:drawableLeft="@drawable/ic_tab_sets"
    android:fontFamily="@font/hurmes_regular"
    android:gravity="center"
    android:text="@string/create_set"
    android:textAllCaps="false" />
  <Button
    android:id="@+id/createFolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/text_margin"
    android:paddingRight="220dp"
    android:background="@color/colorWhite"
    android:drawableLeft="@drawable/ic_tab_folders"
    android:fontFamily="@font/hurmes_regular"
    android:gravity="center"
    android:text="@string/create_folder"
    android:textAllCaps="false" />
  <Button
    android:id="@+id/createClass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/text_margin"
    android:paddingRight="230dp"
    android:background="@color/colorWhite"
    android:drawableLeft="@drawable/ic_tab_groups"
    android:fontFamily="@font/hurmes_regular"
    android:gravity="center"
    android:text="@string/create_class"
    android:textAllCaps="false"/>

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="76dp" />
</LinearLayout>