<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
  android:layout_height="match_parent">
  <TextView
    android:id="@+id/wrongContentTextView"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:layout_marginTop="200dp"
    android:text="@string/wrong_content"
    android:textStyle="bold"
    android:textSize="16dp"
    android:textColor="@color/colorWhite"
    android:paddingVertical="22dp"
    android:paddingLeft="80dp"
    android:layout_marginHorizontal="16dp"
    android:background="@drawable/learn_wrong_background"/>
  <TextView
    android:id="@+id/questionTextView"
    android:layout_below="@id/wrongContentTextView"
    android:textSize="18dp"
    android:layout_marginHorizontal="16dp"
    android:background="@color/colorWhite"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
  <TextView
    android:id="@+id/correctContent"
    android:layout_below="@id/questionTextView"
    android:text="@string/correct_answer_context"
    android:textSize="15dp"
    android:background="@color/colorWhite"
    android:textColor="@color/colorGreen"
    android:layout_marginHorizontal="16dp"
    android:paddingHorizontal="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
  <TextView
    android:id="@+id/correctAnswerTextView"
    android:layout_below="@id/correctContent"
    android:textSize="18dp"
    android:background="@color/colorWhite"
    android:layout_marginHorizontal="16dp"
    android:paddingHorizontal="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
  <TextView
    android:id="@+id/choosedContentTextView"
    android:layout_below="@id/correctAnswerTextView"
    android:text="@string/you_said_context"
    android:textSize="15dp"
    android:background="@color/colorWhite"
    android:textColor="@color/colorRed"
    android:layout_marginHorizontal="16dp"
    android:paddingHorizontal="24dp"
    android:paddingTop="40dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
  <TextView
    android:id="@+id/choosedAnswerTextView"
    android:layout_below="@id/choosedContentTextView"
    android:textSize="18dp"
    android:background="@color/colorWhite"
    android:paddingBottom="24dp"
    android:layout_marginHorizontal="16dp"
    android:paddingHorizontal="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
  <Button
    android:id="@+id/continueButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:layout_marginHorizontal="16dp"
    android:text="@string/continue_key"
    android:textColor="@color/colorAccent"
    android:layout_below="@id/choosedAnswerTextView"/>

</RelativeLayout>