<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  app:layoutDescription="@xml/fragment_home_scene"
  android:background="@color/colorLightGray">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:weightSum="8"
    android:background="@color/colorPrimaryVariant"
    android:orientation="horizontal">

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="6"
      android:layout_marginTop="18dp"
      android:layout_marginLeft="16dp"
      android:fontFamily="@font/hurmes_semibold"
      android:text="@string/home"
      android:textColor="@color/colorWhite"
      android:textSize="24sp" />

    <ImageView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginRight="16dp"
      android:layout_gravity="center"
      android:src="@drawable/ic_notification_24dp"/>

    <ImageView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginRight="@dimen/text_margin"
      android:layout_gravity="right|center"
      android:src="@drawable/plus_badge_bg"/>
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/set"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/sets"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="18dp"
      android:textSize="18sp"
      android:fontFamily="@font/hurmes_semibold"
      android:textColor="@color/colorBlack"/>

    <TextView
      android:id="@+id/viewAllTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginLeft="220dp"
      android:layout_marginTop="18dp"
      android:layout_marginRight="10dp"
      android:drawableRight="@drawable/ic_view_all"
      android:fontFamily="@font/hurmes_semibold"
      android:gravity="center"
      android:text="@string/view_all"
      android:textColor="@color/colorTear"
      android:textSize="14sp" />

  </LinearLayout>
  <com.google.android.material.tabs.TabLayout
    android:id="@+id/tabLayout"
    android:layout_width="0dp"
    android:layout_height="0dp">

    <com.google.android.material.tabs.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Monday" />

    <com.google.android.material.tabs.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Tuesday" />

    <com.google.android.material.tabs.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Wednesday" />

    <com.google.android.material.tabs.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Wednesday" />

  </com.google.android.material.tabs.TabLayout>
  <androidx.viewpager.widget.ViewPager
    android:id="@+id/viewPager"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginTop="@dimen/text_margin"></androidx.viewpager.widget.ViewPager>


</LinearLayout>